protocols/tests/adders/adder_d1/didnt_end_in_step.out
error: Final statement in `add_doesnt_end_in_step` is not a step.
   ┌─ adders/adder_d1/didnt_end_in_step.prot:16:3
   │
16 │   fork();
   │   ^^^^^^^ Final statement in `add_doesnt_end_in_step` is not a step.

