protocols/tests/adders/adder_d1/didnt_end_in_step.prot
// maps to a verilog design
struct Adder {
  in a: u32,
  in b: u32,
  out s: u32,
}

// Like `add`, but this protocol doesn't end in `step`, so this function is ill-formed
prot add_doesnt_end_in_step<DUT: Adder>(a: u32, b: u32, s: u32) {
  DUT.a := a;
  DUT.b := b;
  step();
  DUT.a := X;
  DUT.b := X;
  assert_eq(s, DUT.s);
  fork();
}
